--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <nav>
+        <ul>
+            <li>Home</li>
+            <li>Products</li>
+            <li>Cart</li>
+            <li>Registration</li>
+            <li>Login</li>
+        </ul>
+    </nav>
     <h1>Welcome To our Page</h1>
     <script src="slider.js"></script>
   </body>
