--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <li>Login</li>
         </ul>
     </nav>
+    <div id="Slider">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ1OT1fhCSataGBl5O0yYNNdKG-OSh09fOIOQ&s" alt="">
+    </div>
     <h1>Welcome To our Page</h1>
     <script src="slider.js"></script>
   </body>
