--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
             <li>Login</li>
         </ul>
     </nav>
+    <div id="Sidebar">
+        <ul>
+            <li>Categories</li>
+            <li>Filter by price</li>
+            <li>Filter by brand</li>    
+        </ul>
+    </div>
     <div id="Slider">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ1OT1fhCSataGBl5O0yYNNdKG-OSh09fOIOQ&s" alt="">
     </div>
