--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ1OT1fhCSataGBl5O0yYNNdKG-OSh09fOIOQ&s" alt="">
     </div>
     <h1>Welcome To our Page</h1>
+    <footer>
+        <p>&copy; 2020 All rights reserved</p>
+    </footer>
     <script src="slider.js"></script>
   </body>
 </html>
