--- a/index.html
+++ b/index.html
@@ -8,27 +8,34 @@
   </head>
   <body>
     <nav>
-        <ul>
-            <li>Home</li>
-            <li>Products</li>
-            <li>Cart</li>
-            <li>Registration</li>
-            <li>Login</li>
-        </ul>
+      <ul>
+        <li>Home</li>
+        <li>Products</li>
+        <li>Cart</li>
+        <li>Registration</li>
+        <li>Login</li>
+      </ul>
     </nav>
     <div id="Sidebar">
-        <ul>
-            <li>Categories</li>
-            <li>Filter by price</li>
-            <li>Filter by brand</li>    
-        </ul>
+      <ul>
+        <li>Categories</li>
+        <li>Filter by price</li>
+        <li>Filter by brand</li>
+      </ul>
     </div>
     <div id="Slider">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ1OT1fhCSataGBl5O0yYNNdKG-OSh09fOIOQ&s" alt="">
+      <img
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ1OT1fhCSataGBl5O0yYNNdKG-OSh09fOIOQ&s"
+        alt=""
+      />
     </div>
     <h1>Welcome To our Page</h1>
     <footer>
-        <p>&copy; 2020 All rights reserved</p>
+      <ul>
+        <li>Home</li>
+        <li>About us</li>
+      </ul>
+      <p>&copy; 2020 All rights reserved</p>
     </footer>
     <script src="slider.js"></script>
   </body>
