add article to index.html

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <li>Filter by brand</li>
       </ul>
     </div>
+    <div>
+      <h3>title</h3>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur, doloribus! Voluptatum eligendi doloribus laboriosam eaque ratione odit! Vitae eos quibusdam exercitationem amet, architecto eveniet nihil inventore magni rem itaque ullam!</p>
+    </div>
     <div id="Slider">
       <img
         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ1OT1fhCSataGBl5O0yYNNdKG-OSh09fOIOQ&s"
